--- a/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_server/tasks/main.yml
@@ -350,4 +350,4 @@
     sudo sleep 30
     #sudo route add -net {{client_cidr}}/24 dev tun0
     sudo rm -r CLOUDPATT
-    #sudo rm -r config
+    sudo rm -r config
