--- a/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_client/tasks/main.yml
@@ -98,6 +98,6 @@
     executable: /bin/bash
   shell: |
     sudo sleep 30
-    #sudo route add -net {{server_cidr}}/24  dev tun0
+    sudo route add -net {{server_cidr}}/24  dev tun0
     sudo rm -r CLOUDPATT
-    #sudo rm -r config
+    sudo rm -r config
