--- a/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_server/files/server.conf
+++ b/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_server/files/server.conf
@@ -3,8 +3,9 @@ proto udp
 dev tun
 client-config-dir ccd
 route X.X.X.X 255.255.255.0
+route X.X.X.X.X 25.255.255.0
 client-to-client
-#push "route X.X.X.X 255.255.255.0"
+push "route X.X.X.X 255.255.255.0"
 push "route X.X.X.X.X 255.255.255.0"
 ca /etc/openvpn/ca.crt
 cert /etc/openvpn/server.crt
