--- a/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_server/tasks/main.yml
@@ -294,19 +294,25 @@
   replace:
     dest=/etc/openvpn/server.conf
     regexp='route X.X.X.X 255.255.255.0'
-    replace='route {{client_cidr}} 255.255.255.0'
+    replace='route {{server_cidr}} 255.255.255.0'
 
 - name: setting server.conf 2
   replace:
     dest=/etc/openvpn/server.conf
-    regexp='#push "X.X.X.X 255.255.255.0"'
-    replace='#push "{{server_cidr}} 255.255.255.0"'
+    regexp='route X.X.X.X.X 255.255.255.0'
+    replace='route {{client_cidr}} 255.255.255.0'
 
 - name: setting server.conf 3
   replace:
     dest=/etc/openvpn/server.conf
-    regexp='push "X.X.X.X.X 255.255.255.0"'
-    replace='push "{{client_cidr}} 255.255.255.0"'
+    regexp='push "route X.X.X.X 255.255.255.0"'
+    replace='push "route {{server_cidr}} 255.255.255.0"'
+
+- name: setting server.conf 4
+  replace:
+    dest=/etc/openvpn/server.conf
+    regexp='push "route X.X.X.X.X 255.255.255.0"'
+    replace='push "route {{client_cidr}} 255.255.255.0"'
 
 - name: setting client1
   replace:
@@ -333,14 +339,14 @@
     #sudo route add -net {{client_cidr}} netmask 255.255.255.0 gw {{server_cidr_gw}}
     sudo service openvpn restart
 
-#- name: iptablenat
-#  args:
-#    chdir: /home/cloud
-#    executable: /bin/bash
-#  shell: |
-#    sudo /sbin/iptables -t nat -A POSTROUTING -o tun0 -j MASQUERADE
-#    sudo /sbin/iptables -A FORWARD -i tun0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-#    sudo /sbin/iptables -A FORWARD -i eth0 -o tun0 -j ACCEPT
+- name: iptablenat
+  args:
+    chdir: /home/cloud
+    executable: /bin/bash
+  shell: |
+    sudo /sbin/iptables -t nat -A POSTROUTING -o tun0 -j MASQUERADE
+    sudo /sbin/iptables -A FORWARD -i tun0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
+    sudo /sbin/iptables -A FORWARD -i eth0 -o tun0 -j ACCEPT
 
 - name: cleaning
   args:
