--- a/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_client/tasks/main.yml
@@ -22,6 +22,7 @@
     pkg={{ item }}
     state=present
   with_items:
+    - iptables-persistent
     - openssl
     - curl
     - bzip2
@@ -85,12 +86,10 @@
     chdir: /home/cloud
     executable: /bin/bash
   shell: |
-    cd /home/cloud/
-    sudo /sbin/iptables -t nat -A POSTROUTING -o tun0 -j MASQUERADE
-    sudo /sbin/iptables -A FORWARD -i tun0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-    sudo /sbin/iptables -A FORWARD -i eth0 -o tun0 -j ACCEPT
-    #sudo rm -r CLOUDPATT
-    #sudo rm -r config
+      sudo iptables -t nat -A POSTROUTING -o tun0 -j MASQUERADE
+      sudo iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
+      sudo /etc/init.d/iptables-persistent save
+      sudo /etc/init.d/iptables-persistent reload
 
 - name: adding route
   args:
