--- a/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_server/tasks/main.yml
@@ -19,6 +19,7 @@
     pkg={{ item }}
     state=present
   with_items:
+    - iptables-persistent
     - openssl
     - curl
     - bzip2
@@ -311,8 +312,8 @@
 - name: setting server.conf 4
   replace:
     dest=/etc/openvpn/server.conf
-    regexp='push "route X.X.X.X.X 255.255.255.0"'
-    replace='push "route {{client_cidr}} 255.255.255.0"'
+    regexp='# push "route X.X.X.X.X 255.255.255.0"'
+    replace='# push "route {{client_cidr}} 255.255.255.0"'
 
 - name: setting client1
   replace:
@@ -344,9 +345,11 @@
     chdir: /home/cloud
     executable: /bin/bash
   shell: |
-    sudo /sbin/iptables -t nat -A POSTROUTING -o tun0 -j MASQUERADE
-    sudo /sbin/iptables -A FORWARD -i tun0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-    sudo /sbin/iptables -A FORWARD -i eth0 -o tun0 -j ACCEPT
+    sudo iptables -t nat -A POSTROUTING -o tun0 -j MASQUERADE
+    sudo iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
+    sudo /etc/init.d/iptables-persistent save
+    sudo /etc/init.d/iptables-persistent reload
+
 
 - name: cleaning
   args:
