--- a/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_client/tasks/main.yml
@@ -8,6 +8,13 @@
     update_cache=yes
     cache_valid_time=3600
 
+- name: erase route server
+  args:
+    chdir: /home/cloud/
+    executable: /bin/bash
+  shell: |
+    sudo route del -net {{server_cidr}} netmask 255.255.255.0 gw {{client_cidr_gw_df}}
+
 - name: enable IPv4 forwarding
   shell: sysctl net.ipv4.ip_forward=1
 
