--- a/image-factory/bundle-trusty-vpn(randomwarrior)/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn(randomwarrior)/heat/bundle-trusty-vpn.heat.yml
@@ -10,6 +10,7 @@ parameters:
   server_cidr:
     description: /24 cidr of local subnet
     type: string
+    default:  10.10.10.0/24
 
   COUNTRY:
     description: COUNTRY for the VPN certificate
@@ -19,6 +20,7 @@ parameters:
     constraints:
       - length: { min: 1, max: 2 }
         description: COUNTRY must be between 1 and 2 characters
+    default: FR
 
   PROVINCE:
     description: PROVINCE for the VPN certificate
@@ -28,6 +30,7 @@ parameters:
     constraints:
       - length: { min: 1, max: 40 }
         description: PROVINCE must be between 1 and 40 characters
+    default: IDF
 
   CITY:
     description: CITY for the VPN certificate
@@ -37,6 +40,7 @@ parameters:
     constraints:
       - length: { min: 1, max: 40 }
         description: CITY must be between 1 and 40 characters
+    default: Paris
 
   ORGANISATION:
     description: ORGANISATION for the VPN certificate
@@ -46,6 +50,7 @@ parameters:
     constraints:
       - length: { min: 1, max: 40 }
         description: ORGANISATION must be between 1 and 40 characters
+    default: CLOUDWATT
 
   EMAIL:
     description: EMAIL for the VPN certificate
@@ -55,7 +60,7 @@ parameters:
     constraints:
       - length: { min: 1, max: 40 }
         description:  EMAIL must be between 1 and 40 characters
-
+    default: contact@cloudwatt.com
 
   image:
     type: string
@@ -66,7 +71,7 @@ parameters:
     description: Keypair to inject in instance
     label: SSH Keypair
     type: string
-    default: mickaelfr2
+    default: mickael
 
   flavor_name:
     default: n2.cw.standard-2
@@ -126,8 +131,8 @@ resources:
   floating_ip:
     type: OS::Neutron::FloatingIP
     properties:
-      floating_network_id: b5dd7532-1533-4b9c-8bf9-e66631a9be1d
-      #floating_network_id: 6ea98324-0f14-49f6-97c0-885d1b8dc517
+      #floating_network_id: b5dd7532-1533-4b9c-8bf9-e66631a9be1d
+      floating_network_id: 6ea98324-0f14-49f6-97c0-885d1b8dc517
       port_id: { get_resource: server_port }
 
 
@@ -204,7 +209,12 @@ resources:
             $server_cidr$: {get_param: server_cidr}
             $ip_server$: { get_attr: [floating_ip, floating_ip_address] }
 
-
+  my_key:
+    type: OS::Nova::KeyPair
+    properties:
+      save_private_key: false
+      name: my_key
+      
 outputs:
 
 
