--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/seed-mysql.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/seed-mysql.yml
@@ -74,9 +74,9 @@
     - name: mysql sst_user is created
       mysql_user:
         name=sst_user
-        host="127.0.0.1"
+        host="%"
         password="sst_user"
-        priv=*.*:RELOAD, LOCK TABLES, REPLICATION CLIENT
+        priv="*.*:RELOAD, LOCK TABLES, REPLICATION CLIENT"
         state=present
 
     - name: mysql user2 is created
