--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/seed-mysql.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/seed-mysql.yml
@@ -59,7 +59,7 @@
 
     - name: first node start
       args:
-        chdir: /etc/openvpn/easy-rsa
+        chdir: /home/cloud
         executable: /bin/bash
       shell: |
         sudo /etc/init.d/mysql bootstrap-pxc
