--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/seed-mysql.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/seed-mysql.yml
@@ -4,11 +4,11 @@
 
   vars:
    wp_db_pass: "{{ lookup('file', '/home/cloud/mysqlpwd') }}"
-   ip_node1:  "10.1.2.4"
+   ip_node1: 10.1.2.4
    #"{{ lookup('file', '/home/cloud/ip_node') }}"
-   ip_node2: "10.1.2.5"
+   ip_node2: 10.1.2.5
    #"{{ lookup('file', '/home/cloud/ip_node2') }}"
-   ip_node3: "10.1.2.6"
+   ip_node3: 10.1.2.6
    #"{{ lookup('file', '/home/cloud/ip_node3') }}"
 
   tasks:
@@ -63,7 +63,6 @@
         executable: /bin/bash
       shell: |
         sudo /etc/init.d/mysql bootstrap-pxc
-
     - name: mysql database is created
       mysql_db:
         name=wordpress
