--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/galera.cnf
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/galera.cnf
@@ -10,10 +10,10 @@ default-storage-engine=innodb
 innodb_autoinc_lock_mode=2
 innodb_locks_unsafe_for_binlog=1
 wsrep_provider=/usr/lib/libgalera_smm.so
-wsrep_cluster_address=gcomm://X.X.X.X,X.X.X.X.X,X.X.X.X.X.X
+wsrep_cluster_address=gcomm://AAA,BBB,CCC
 binlog_format=ROW
 # Node
-wsrep_node_address=X.X.X.X
+wsrep_node_address=AAA
 wsrep_sst_method=xtrabackup
 wsrep_cluster_name=mycluster
 wsrep_sst_auth="sst_user:sst_user"
