--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/seed-mysql.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/seed-mysql.yml
@@ -50,7 +50,7 @@
 
     - name: mysql database is created
       mysql_db:
-        name=wordpress
+        name="wordpress"
         state=present
 
     - name: mysql user is created
