--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/seed-mysql.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/seed-mysql.yml
@@ -24,6 +24,7 @@
         state=present
       with_items:
         - percona-xtradb-cluster-server
+        - python-mysqldb
 
     - name: galera.cnf configuration
       template:
