--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/seed-mysql.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/seed-mysql.yml
@@ -63,12 +63,13 @@
         state=present
 
     - name: mysql sst_user is created
-      mysql_user:
-        name=sst_user
-        host="all"
-        password="sst_user"
-        priv="*.*:RELOAD, LOCK TABLES, REPLICATION CLIENT"
-        state=present
+      args:
+        chdir: /home/cloud
+        executable: /bin/bash
+      shell: |
+        mysql -u root -e "CREATE USER 'sst_user'@'localhost' IDENTIFIED BY 'sst_user';"
+        mysql -u root -e "GRANT RELOAD, LOCK TABLES, REPLICATION CLIENT ON *.* TO 'sst_user'@'localhost';"
+        mysql -u root -e "FLUSH PRIVILEGES;"
 
     - name: mysql user2 is created
       mysql_user:
