--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my2/tasks/seed-mysql.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my2/tasks/seed-mysql.yml
@@ -12,7 +12,7 @@
    #"{{ lookup('file', '/home/cloud/ip_node3') }}"
 
   tasks:
-
+    - pause: minutes=2
     - name: apt-get update & upgrade
       apt:
         upgrade=full
