--- a/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
@@ -5,7 +5,22 @@
   vars:
     vpn_static:
 
-  roles:
-    - { role: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.4" }
-    - { role: wordpress_my2, when: ansible_default_ipv4.address == "10.1.2.5" }
-    - { role: wordpress_my3, when: ansible_default_ipv4.address == "10.1.2.6" }
+    - name: apply common configuration to all nodes
+      hosts: 10.1.2.4
+      roles:
+        - wordpress_my1
+
+    - name: apply common configuration to all nodes
+      hosts: 10.1.2.5
+      roles:
+        - wordpress_my2
+
+    - name: apply common configuration to all nodes
+      hosts: 10.1.2.6
+      roles:
+        - wordpress_my3
+
+  #roles:
+  #  - { role: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.4" }
+  #  - { role: wordpress_my2, when: ansible_default_ipv4.address == "10.1.2.5" }
+  #  - { role: wordpress_my3, when: ansible_default_ipv4.address == "10.1.2.6" }
