--- a/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
@@ -2,8 +2,7 @@
   user: cloud
   become: yes
 
-  vars:
-    vpn_static:
+  tasks:
 
     - name: apply common configuration to all nodes
       hosts: 10.1.2.4
