--- a/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
@@ -7,19 +7,24 @@
     hosts: localhost
     user: cloud
     become: yes
-    roles: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.4"
+    roles:
+      - { role: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.4" }
     #  - wordpress_my1
     #when: ansible_default_ipv4.address == "10.1.2.4"
 
   - name: apply common configuration to the node2
-    hosts: "10.1.2.5"
-    roles: wordpress_my2, when: ansible_default_ipv4.address == "10.1.2.4"
+    hosts: localhost
+    user: cloud
+    become: yes
+    roles:
+      - { role: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.5" }
     #  - wordpress_my2
     #when: ansible_default_ipv4.address == "10.1.2.5"
 
   - name: apply common configuration to the node3
     hosts: "10.1.2.6"
-    roles: wordpress_my3, when: ansible_default_ipv4.address == "10.1.2.4"
+    roles:
+      - { role: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.6" }
     #  - wordpress_my3
     #when: ansible_default_ipv4.address == "10.1.2.6"
 
