--- a/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
@@ -1,35 +1,33 @@
-#- hosts: local
-#  user: cloud
-#  become: yes
----
+- hosts: local
+  user: cloud
+  become: yes
 
-  - name: apply common configuration to the node1
-    hosts: localhost 
-    user: cloud
-    become: yes
-    roles:
-      #- { role: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.4" }
-      - wordpress_my1
-
-  - name: apply common configuration to the node2
-    hosts: "10.1.2.5"
-    user: cloud
-    become: yes
-    roles:
-      - { role: wordpress_my2, when: ansible_default_ipv4.address == "10.1.2.5" }
-    #  - wordpress_my2
-
-
-  - name: apply common configuration to the node3
-    hosts: "10.1.2.6"
-    user: cloud
-    become: yes
-    roles:
-      - { role: wordpress_my3, when: ansible_default_ipv4.address == "10.1.2.6" }
-    #  - wordpress_my3
+  # - name: apply common configuration to the node1
+  #   hosts: localhost
+  #   user: cloud
+  #   become: yes
+  #   roles:
+  #     #- { role: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.4" }
+  #     # - wordpress_my1........::
+  # - name: apply common configuration to the node2
+  #   hosts: "10.1.2.5"
+  #   user: cloud
+  #   become: yes
+  #   roles:
+  #     - { role: wordpress_my2, when: ansible_default_ipv4.address == "10.1.2.5" }
+  #   #  - wordpress_my2
+  #
+  #
+  # - name: apply common configuration to the node3
+  #   hosts: "10.1.2.6"
+  #   user: cloud
+  #   become: yes
+  #   roles:
+  #     - { role: wordpress_my3, when: ansible_default_ipv4.address == "10.1.2.6" }
+  #   #  - wordpress_my3
 
 
-  #roles:
-  #  - { role: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.4" }
-  #  - { role: wordpress_my2, when: ansible_default_ipv4.address == "10.1.2.5" }
-  #  - { role: wordpress_my3, when: ansible_default_ipv4.address == "10.1.2.6" }
+  roles:
+   - { role: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.4" }
+   - { role: wordpress_my2, when: ansible_default_ipv4.address == "10.1.2.5" }
+   - { role: wordpress_my3, when: ansible_default_ipv4.address == "10.1.2.6" }
