--- a/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
@@ -2,6 +2,10 @@
   user: cloud
   become: yes
 
+
+  vars:
+  wordpress_my1:
+  
   # - name: apply common configuration to the node1
   #   hosts: localhost
   #   user: cloud
