--- a/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
@@ -2,10 +2,6 @@
   user: cloud
   become: yes
 
-
-  vars:
-  wordpress_my1:
-  
   # - name: apply common configuration to the node1
   #   hosts: localhost
   #   user: cloud
@@ -32,6 +28,6 @@
 
 
   roles:
-   - { role: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.4" }
-   - { role: wordpress_my2, when: ansible_default_ipv4.address == "10.1.2.5" }
-   - { role: wordpress_my3, when: ansible_default_ipv4.address == "10.1.2.6" }
+    - wordpress_my1
+  #  - { role: wordpress_my3, when: ansible_default_ipv4.address == "10.1.2.6" }
+  #  - { role: wordpress_my2, when: ansible_default_ipv4.address == "10.1.2.5" }
