--- a/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/boot2strapMYSQL.yml
@@ -1,34 +1,33 @@
----
-# - hosts: local
-#   user: cloud
-#   become: yes
+- hosts: local
+  user: cloud
+  become: yes
 
-  # vars:
-  #   wordpress_my:
-  #
-  # roles:
-  #   - wordpress_my1
+  vars:
+    wordpress_my:
 
-    - name: apply common configuration to the node1
-      hosts: my_server1
-      user: cloud
-      become: yes
-      roles:
-        - { role: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.4" }
+  roles:
+    - wordpress_my1
 
-    - name: apply common configuration to the node2
-      hosts: my_server2
-      user: cloud
-      become: yes
-      roles:
-        - { role: wordpress_my2, when: ansible_default_ipv4.address == "10.1.2.5" }
-
-    - name: apply common configuration to the node3
-      hosts: my_server3
-      user: cloud
-      become: yes
-      roles:
-        - { role: wordpress_my3, when: ansible_default_ipv4.address == "10.1.2.6" }
+    # - name: apply common configuration to the node1
+    #   hosts: my_server1
+    #   user: cloud
+    #   become: yes
+    #   roles:
+    #     - { role: wordpress_my1, when: ansible_default_ipv4.address == "10.1.2.4" }
+    #
+    # - name: apply common configuration to the node2
+    #   hosts: my_server2
+    #   user: cloud
+    #   become: yes
+    #   roles:
+    #     - { role: wordpress_my2, when: ansible_default_ipv4.address == "10.1.2.5" }
+    #
+    # - name: apply common configuration to the node3
+    #   hosts: my_server3
+    #   user: cloud
+    #   become: yes
+    #   roles:
+    #     - { role: wordpress_my3, when: ansible_default_ipv4.address == "10.1.2.6" }
     #  - wordpress_my3
 
 
