--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_web/tasks/main.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_web/tasks/main.yml
@@ -9,7 +9,7 @@
 
     - name: apache site configuration
       copy:
-        src=role/wordpress_web/files/wordpress.apache2.conf
+        src=wordpress.apache2.conf
         dest=/etc/apache2/sites-available/default-wp.conf
         owner=root
         group=root
@@ -18,7 +18,7 @@
 
     - name: wordpress site configuration
       template:
-        src=role/wordpress_web/files/wordpress.etc.conf
+        src=wordpress.etc.conf
         dest=/etc/wordpress/config-default.php
         owner=root
         group=root
@@ -42,5 +42,3 @@
 
     - name: apache service started
       service: name=apache2 state=started enabled=yes
-
-  
