--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_web/vars/main.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_web/vars/main.yml
@@ -2,4 +2,4 @@
 wordpress_web:
 wp_db_name: wordpress
 wp_db_pass: "{{ lookup('file', '/home/cloud/mysqlpwd') }}"
-wp_mysql_lb: "{{ lookup('file', '/var/log/sql_vip') }}"
+wp_mysql_lb: "{{ lookup('file', '/home/cloud/sql_vip') }}"
