--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/main.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_my1/tasks/main.yml
@@ -61,6 +61,22 @@
 - name: mysql user is created
   mysql_user:
     name=wordpress
+    host="10.1.1.3"
+    password="{{ wp_db_pass }}"
+    priv=wordpress.*:ALL
+    state=present
+
+- name: mysql user is created
+  mysql_user:
+    name=wordpress
+    host="10.1.2.3"
+    password="{{ wp_db_pass }}"
+    priv=wordpress.*:ALL
+    state=present
+
+- name: mysql user is created
+  mysql_user:
+    name=wordpress
     host="10.1.1.4"
     password="{{ wp_db_pass }}"
     priv=wordpress.*:ALL
