--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_web/tasks/main.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_web/tasks/main.yml
@@ -6,6 +6,11 @@
       with_items:
         - apache2
         - wordpress
+    - name: apache service started
+      service: name=apache2 state=started
+
+    - name: apache service enabled
+      service: name=apache2 enabled=yes
 
     - name: apache site configuration
       copy:
@@ -20,8 +25,8 @@
       template:
         src=wordpress.etc.conf
         dest=/etc/wordpress/config-default.php
-        owner=root
-        group=root
+        owner=www-data
+        group=www-data
         mode=0644
 
     - name: wordpress content has correct ownership
