--- a/image-factory/bundle-trusty-wordpress2/heat/srv_wdprss.yaml
+++ b/image-factory/bundle-trusty-wordpress2/heat/srv_wdprss.yaml
@@ -79,10 +79,10 @@ resources:
             echo "[local]" >> /etc/ansible/hosts
             echo "127.0.0.1 ansible_connection=local" >> /etc/ansible/hosts
             cd /home/cloud/
-            git clone  https://github.com/mickaelremilien/CLOUDPATT.git
-            sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-wordpress2/ansible/boot2strapWORD.yml
             echo  "$mysqlpwd$" >> /home/cloud/mysqlpwd
             echo "$sql_ip$" >> /home/cloud/sql_vip
+            git clone  https://github.com/mickaelremilien/CLOUDPATT.git
+            #sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-wordpress2/ansible/boot2strapWORD.yml
           params:
             $sql_ip$: { get_param: [sql_lb_pool, vip, address]}
             $mysqlpwd$: { get_param: themysqlpwd }
