--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_web/tasks/main.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_web/tasks/main.yml
@@ -19,7 +19,7 @@
 - name: Unarchive wordpress
   unarchive:
    src=wordpress.tar.gz
-   dest=home/cloud/
+   dest=/home/cloud/
 
 - name: move wordpress
   copy:
