--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_web/tasks/main.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_web/tasks/main.yml
@@ -18,7 +18,7 @@
 
 - name: Unarchive wordpress
   unarchive:
-   src=wordpress.tar.gz
+   src=/home/cloud/wordpress.tar.gz
    dest=/home/cloud/
 
 - name: move wordpress
