--- a/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_web/tasks/main.yml
+++ b/image-factory/bundle-trusty-wordpress2/ansible/roles/wordpress_web/tasks/main.yml
@@ -97,5 +97,11 @@
      name=rewrite
      state=present
 
+- name: restart apache
+  service:
+    name=apache2
+    state=restarted
+    enabled=yes
+
 - name: apache service started
   service: name=apache2 state=started enabled=yes
